--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -130,3 +130,16 @@ html, body {
 .hidden {
   display: none;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+.login-layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.login-layout > :first-child {
+  flex: 1; /* ocupa el espacio disponible */
+}
